# antlerinator

./: .gitignore  .pylintrc  .travis.yml  LICENSE.rst  MANIFEST.in  README.rst  RELNOTES.rst  setup.cfg  setup.py  tox.ini
.github/workflows/: main.yml
antlerinator/: __init__.py  __main__.py  arg.py  config.json  download.py  install.py
docs/: antlerinator.rst  cli.rst  conf.py  index.rst
src/antlerinator/: __main__.py  arg.py  build_antlr.py  download.py
tests/: test_arg.py  test_build_antlr.py  test_download.py  test_install.py
tests/resources/: Bello.g4  Hello.g4  mock_java.bat  mock_java.sh
