[metadata]
name = antlerinator
description = ANTLeRinator
long_description = file: README.rst
long_description_content_type = text/x-rst
author = Renata Hodovan, Akos Kiss
author_email = hodovan@inf.u-szeged.hu, akiss@inf.u-szeged.hu
url = https://github.com/renatahodovan/antlerinator
license_expression = BSD-3-Clause
license_files = LICENSE.rst
classifiers =
    Intended Audience :: Developers
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    Topic :: Software Development :: Code Generators
platform = any

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9
install_requires =
    inators
    setuptools
    wheel

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    antlerinator-download = antlerinator.download:execute
distutils.commands =
    build_antlr = antlerinator.build_antlr:build_antlr
    clean_antlr = antlerinator.build_antlr:clean_antlr
setuptools.finalize_distribution_options =
    antlerinator = antlerinator.build_antlr:register
